--- a/css/styles.css
+++ b/css/styles.css
@@ -11,22 +11,69 @@ Lime #00FF00
 
 * {
 	box-sizing: border-box;
+	font-size: 18px;
 }
 
 body {
 	font-family: "Poppins", sans-serif;
 	background-color: #ffffff;
 	font-weight: 400;
-	font-size: 16px;
 	line-height: 1.6;
+	margin: auto;
+	text-align: center;
 }
+
+.page-header {
+	display: flex;
+	width: 100%;
+	padding: 20px;
+}
+.page-header_item {
+	flex: 0 1 200px;
+}
+.page-header_item:last-child {
+	flex-grow: 1;
+	text-align: right;
+}
+.navigation-list {
+	list-style: none;
+}
+.navigation-list li {
+	display: inline-block;
+	margin-left: 15px;
+	font-size: 16px;
+}
+.profile {
+	max-width: 700px;
+	margin: 0 auto;
+	border: #0066ff 2px solid;
+}
+.profile_portrait {
+	float: left;
+	width: 250px;
+	margin-right: 40px;
+	border-radius: 50%;
+}
+
+.page-footer {
+	clear: both;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
+
+.button-example {
+	display: inline-block;
+	clear: both;
+}
+
 table,
 thead,
 tbody,
 tfoot,
 th,
 td {
-	border: 1px solid #dddddd;
+	border: 1px solid #362f2f;
 	border-collapse: collapse;
 	text-align: center;
 }
