--- a/css/styles.css
+++ b/css/styles.css
@@ -109,16 +109,15 @@ button,
 	margin: 10px;
 	padding: 15px 32px;
 	border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-	transition-duration: 0.2s;
-	transition-property: opacity;
+	transition-property: opacity 0.3s;
 }
 
 button:hover,
 button:focus,
 .button:hover,
 .button:focus {
-	background-color: #ffcc00;
-	color: rgb(0, 0, 0);
+	/* background-color: #ffcc00; */
+	color: white;
 	font-weight: bold;
 	opacity: 0.8;
 }
