--- a/css/styles.css
+++ b/css/styles.css
@@ -45,15 +45,28 @@ body {
 	font-size: 16px;
 }
 .profile {
-	max-width: 700px;
-	margin: 0 auto;
-	/*border: #0066ff 2px solid;*/
+	max-width: 600px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	margin: 10px auto;
+	padding: 0.5em;
+	/* border: 2px solid #0066ff; */
 }
 .profile_portrait {
-	float: left;
+	/* float: left; */
 	width: 250px;
-	margin-right: 40px;
+
 	border-radius: 50%;
+	/* border: 2px solid #0066ff; */
+}
+.profile-text {
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	padding: 10px;
+	margin: 0 10px;
+	/* background-color: #228b22; */
 }
 
 .page-footer {
@@ -154,6 +167,11 @@ button:active,
 @media (max-width: 500px) {
 	.projects-grid-container {
 		grid-template-columns: 1fr;
+	}
+	.profile {
+		flex-direction: column;
+		max-width: 310px;
+		margin: 5px auto;
 	}
 }
 
