--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,42 @@
-/*
-color used
- Text color (): ##3c3c3c
- Primary color (): #21675e
- Secondary color (black): #ffa500
- link color (SteelBlue) : #4682B4
-background color (Gainsboro): #dcdcdc
-Lime #00FF00
-
-*/
+:root {
+	--bodyBgColor: #ffffff;
+	--bodyFontSize: 18px;
+	--bodyFontweight: 400;
+	--bodyLineheight: 1.6;
+	--navBgColor: #f3ca20;
+	--linkFontColor: rgb(0, 0, 0);
+	--navlinkItemColor: rgb(0, 0, 0);
+	--navItemBgColor: rgb(0, 0, 0);
+	--navItemColor: white;
+	--formWidth: 400px;
+	--linkColor: #0066ff;
+	--visitedLinkColor: #ff6600;
+	--linkHoverColor: #228b22;
+	--activeLinkColor: deeppink;
+	--buttonBgColor: #0080aa;
+	--buttonFontColor: white;
+	--activeButtonColor: chocolate;
+	--gridBgColor: #fffaf0;
+	--smallScreenSize: 500px;
+	--middelScreenSize: 750px;
+}
 
 * {
 	box-sizing: border-box;
-	font-size: 18px;
+	font-size: var(--bodyFontSize);
 }
 
 body {
 	font-family: "Poppins", sans-serif;
-	background-color: #ffffff;
-	font-weight: 400;
-	line-height: 1.6;
+	background-color: var(--bodyBgColor);
+	font-weight: var(--bodyFontweight);
+	line-height: var(--bodyLineheight);
 	margin: auto;
 	text-align: center;
 }
 
 .page-header {
-	background-color: #f3ca20;
+	background-color: var(--navBgColor);
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -33,13 +45,6 @@ body {
 	border-bottom: #b0b7c0 1px solid;
 	line-height: 1em;
 }
-/* .page-header_item {
-	flex: 0 1 200px;
-}
-.page-header_item:last-child {
-	flex-grow: 1;
-	text-align: left;
-} */
 .navigation-list {
 	padding: 0;
 	margin: 0;
@@ -52,17 +57,17 @@ body {
 }
 .navigation-list_item {
 	text-decoration: none;
-	color: black;
+	color: var(--navlinkItemColor);
 	display: block;
 	padding: 1em 0.2em;
 }
 .navigation-list_item--active {
-	background-color: black;
-	color: white;
+	background-color: var(--navItemBgColor);
+	color: var(--navItemColor);
 }
 .navigation-list_item:hover {
-	background-color: black;
-	color: white;
+	background-color: var(--navItemBgColor);
+	color: var(--navItemColor);
 	padding: 1em 0.2em;
 }
 
@@ -73,14 +78,10 @@ body {
 	align-items: center;
 	margin: 10px auto;
 	padding: 0.5em;
-	/* border: 2px solid #0066ff; */
 }
 .profile_portrait {
-	/* float: left; */
 	width: 250px;
-
 	border-radius: 50%;
-	/* border: 2px solid #0066ff; */
 }
 .profile-text {
 	flex-direction: column;
@@ -88,7 +89,6 @@ body {
 	align-items: center;
 	padding: 10px;
 	margin: 0 10px;
-	/* background-color: #228b22; */
 }
 
 .contact-container {
@@ -96,25 +96,21 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	align-content: center;
-	/* align-items: center; */
 	margin: 1em auto;
 	padding: auto;
 	gap: 25px;
 	max-width: 500px;
-	/*border: 2px solid #f76414;*/
 }
 .personal-contact {
 	margin: 1em auto;
 	padding: 1em auto;
-	/*border: 2px solid #f1b90f;*/
 }
 .form-container {
-	/* text-align: center; */
 	margin: 1em auto;
 	padding: 1em;
 }
 #contact-form {
-	width: 400px;
+	width: var(--formWidth);
 	text-align: center;
 	margin: 1em auto;
 	padding: 1em;
@@ -145,23 +141,23 @@ td {
 }
 
 a {
-	color: #0066ff;
+	color: var(--linkColor);
 }
 a:visited {
-	color: #ff6600;
+	color: var(--visitedLinkColor);
 }
 a:hover,
 a:focus {
 	text-decoration: none;
-	color: #228b22;
+	color: var(--linkHoverColor);
 }
 a:active {
-	color: deeppink;
+	color: var(--activeLinkColor);
 }
 
 button,
 .button {
-	background-color: #0080aa;
+	background-color: var(--buttonBgColor);
 	border: none;
 	color: white;
 	text-align: center;
@@ -179,15 +175,14 @@ button:hover,
 button:focus,
 .button:hover,
 .button:focus {
-	/* background-color: #ffcc00; */
-	color: white;
+	color: var(--buttonFontColor);
 	font-weight: bold;
 	opacity: 0.8;
 }
 
 button:active,
 .button:active {
-	background-color: chocolate;
+	background-color: var(--activeButtonColor);
 	color: white;
 }
 
@@ -200,7 +195,7 @@ button:active,
 	width: 85%;
 }
 .projects-grid-item {
-	background-color: #fffaf0;
+	background-color: var(--gridBgColor);
 }
 
 .skills-list li {
@@ -216,7 +211,7 @@ button:active,
 		line-height: 1em;
 	}
 	.navigation-list {
-		background-color: #f3ca20;
+		background-color: var(--navBgColor);
 		border-top: 1px solid black;
 	}
 	.navigation-list_item {
