--- a/css/style.production.css
+++ b/css/style.production.css
@@ -10,18 +10,29 @@
 	box-sizing: border-box;
 	font-size: 18px;
 }
+html {
+	height: 100%;
+}
 
 body {
 	font-family: "Poppins", sans-serif;
-	background-color: #ffffff;
+	background-color: rgb(255, 255, 255);
 	font-weight: 400;
 	line-height: 1.6;
 	margin: auto;
 	text-align: center;
+	min-height: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
 }
 
 .page-header {
-	background-color: #f3ca20;
+	background-color: rgb(13, 52, 93);
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -31,13 +42,27 @@ body {
 	-webkit-box-pack: justify;
 	-ms-flex-pack: justify;
 	justify-content: space-between;
-	padding: 0.1em 1.5em 0.1em 0.1em;
+	padding: 0;
 	margin: 0;
 	border-bottom: #b0b7c0 1px solid;
-	line-height: 1em;
+	height: 80px;
+}
+.main-navigation {
+	margin: 0 20px;
+	padding: 0;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: end;
+	-ms-flex-pack: end;
+	justify-content: flex-end;
+}
+.page-header img {
+	max-width: 20%;
+	height: 90%;
 }
 .navigation-list {
-	padding: 0;
+	padding: 0 5px;
 	margin: 0;
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -45,22 +70,24 @@ body {
 }
 .navigation-list li {
 	list-style: none;
-	padding: 0.1em;
+	padding: 0 1px;
 	margin: 0;
+	width: 90px;
+	font-weight: bold;
 }
 .navigation-list_item {
 	text-decoration: none;
-	color: rgb(0, 0, 0);
+	color: rgb(245, 243, 243);
 	display: block;
-	padding: 1em 0.2em;
+	padding: 1em 0.1em;
 }
 .navigation-list_item--active {
-	background-color: rgb(0, 0, 0);
-	color: white;
+	background-color: rgba(108, 123, 132, 0.603);
+	color: rgb(255, 255, 255);
 }
 .navigation-list_item:hover {
-	background-color: rgb(0, 0, 0);
-	color: white;
+	background-color: rgba(108, 123, 132, 0.603);
+	color: rgb(255, 255, 255);
 	padding: 1em 0.2em;
 }
 
@@ -74,12 +101,13 @@ body {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
-	margin: 10px auto;
+	margin: 80px auto;
 	padding: 0.5em;
 }
 .profile_portrait {
 	width: 250px;
 	border-radius: 50%;
+	padding: 10px 0.5em 0.5em;
 }
 .profile-text {
 	-webkit-box-orient: vertical;
@@ -93,6 +121,7 @@ body {
 	align-items: center;
 	padding: 10px;
 	margin: 0 10px;
+	border-left: 5px solid rgb(3, 67, 96);
 }
 
 .contact-container {
@@ -108,27 +137,22 @@ body {
 	justify-content: space-between;
 	-ms-flex-line-pack: center;
 	align-content: center;
-	margin: 1em auto;
-	padding: auto;
-	gap: 25px;
-	max-width: 500px;
+	margin: 2em auto;
+	padding: 1.5em;
+	gap: 10px;
+	width: 60%;
 }
 .personal-contact {
-	margin: 1em auto;
-	padding: 1em auto;
-}
-.form-container {
-	margin: 1em auto;
+	margin: 1em;
 	padding: 1em;
 }
-#contact-form {
-	width: 400px;
-	text-align: center;
-	margin: 1em auto;
-	padding: 1em;
+
+footer {
+	background-color: #73aabb;
+	margin-top: auto;
+	width: 100%;
 }
 .page-footer {
-	clear: both;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -136,12 +160,57 @@ body {
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
 	flex-direction: column;
-	text-align: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+.page-footer .social-media {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	gap: 20px;
+}
+svg {
+	width: 60%;
+}
+.page-footer .social-media a img {
+	width: 50px;
+	height: 50px;
+	margin: 0px;
 }
 
 .button-example {
 	display: inline-block;
 	clear: both;
+}
+main .about-wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-ms-flex-pack: distribute;
+	justify-content: space-around;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-ms-flex-line-pack: center;
+	align-content: center;
+	max-width: 95%;
+	margin: auto;
+	padding: 40px 1px 80px 1px;
+	gap: 40px;
 }
 
 table,
@@ -153,30 +222,57 @@ td {
 	border: 1px solid #362f2f;
 	border-collapse: collapse;
 	text-align: center;
-	margin: 1.5em auto;
+	margin: 0em 0.1em;
 	padding: 0.5em;
 }
 
+th {
+	background-color: #4ca0e4;
+}
+tr:nth-child(even) {
+	background-color: #9ce2f7;
+}
+tr:hover {
+	background-color: #92a7af;
+	color: white;
+}
+
+caption {
+	caption-side: bottom;
+	font-size: small;
+}
+
+.skills-list {
+	margin: 5px auto;
+	padding: 0;
+}
+
+.skills-list li {
+	list-style: none;
+	text-align: center;
+	margin: 0.1em auto;
+	padding: 0.5em;
+}
 a {
-	color: #0066ff;
+	color: rgb(7, 50, 243);
 }
 a:visited {
-	color: #ff6600;
+	color: rgb(255, 102, 0);
 }
 a:hover {
 	text-decoration: none;
-	color: #228b22;
+	color: rgb(34, 139, 34);
 }
 a:focus {
 	text-decoration: none;
-	color: #228b22;
+	color: rgb(34, 139, 34);
 }
 a:active {
 	color: deeppink;
 }
 
 button {
-	background-color: #0080aa;
+	background-color: rgb(0, 128, 170);
 	border: none;
 	color: white;
 	text-align: center;
@@ -193,7 +289,7 @@ button {
 }
 
 .button {
-	background-color: #0080aa;
+	background-color: rgb(0, 128, 170);
 	border: none;
 	color: white;
 	text-align: center;
@@ -234,48 +330,85 @@ button:focus {
 }
 
 button:active {
-	background-color: chocolate;
+	background-color: rgb(210, 105, 30);
 	color: white;
 }
 
 .button:active {
-	background-color: chocolate;
+	background-color: rgb(210, 105, 30);
 	color: white;
 }
 
 /*css for index page */
+.work-wrapper {
+	width: 95%;
+	margin: auto;
+	padding: 40px 5px 80px 5px;
+}
+
 .projects-grid-container {
 	display: -ms-grid;
 	display: grid;
-	-ms-grid-columns: 1fr 10px 1fr;
-	grid-template-columns: 1fr 1fr;
+	-ms-grid-columns: 1fr 10px 1fr 10px 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 	grid-gap: 10px;
 	margin: auto;
-	width: 85%;
+	padding: 10px;
+	color: black;
 }
 .projects-grid-item {
-	background-color: #fffaf0;
-}
-
-.skills-list li {
-	list-style: none;
-	text-align: center;
+	background-color: rgb(255, 250, 240);
+	margin: 10px;
+	padding: 0 50px 50px 50px;
 }
 
 /* media queries */
 @media (max-width: 500px) {
 	.page-header {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
 		-webkit-box-orient: vertical;
 		-webkit-box-direction: normal;
 		-ms-flex-direction: column;
 		flex-direction: column;
+		-webkit-box-pack: justify;
+		-ms-flex-pack: justify;
+		justify-content: space-between;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
+		align-items: center;
 		border-bottom: 1px solid black;
-		line-height: 1em;
+		height: 100%;
+		width: 100%;
+		gap: 5px;
+	}
+	.main-navigation {
+		margin: 0 3px;
+		padding: 0;
+		border: 2px solid #0ced8b;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		width: 100%;
+	}
+	.page-header img {
+		max-width: 100%;
+		height: 90%;
+		border: 2px solid #f60000;
 	}
 	.navigation-list {
-		background-color: #f3ca20;
+		background-color: rgb(13, 52, 93);
 		border-top: 1px solid black;
+		width: 100%;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-pack: justify;
+		-ms-flex-pack: justify;
+		justify-content: space-between;
 	}
+
 	.navigation-list_item {
 		padding: 0.1em 0;
 	}
@@ -297,15 +430,21 @@ button:active {
 		margin: 5px auto;
 	}
 	.contact-container {
-		margin: 5px auto;
-		padding: 3px auto;
+		margin: 0 auto;
+		padding: 0;
 		-webkit-box-align: center;
 		-ms-flex-align: center;
 		align-items: center;
+		width: 95%;
+	}
+	table,
+	td,
+	th {
+		font-size: 0.8em;
 	}
 }
 
-@media (min-width: 500px) and (max-width: 750px) {
+@media (min-width: 500px) and (max-width: 768px) {
 	.projects-grid-container {
 		-ms-grid-columns: 1fr 10px 1fr;
 		grid-template-columns: 1fr 1fr;
