--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,15 @@
 	--bodyFontweight: 400;
 	--bodyLineheight: 1.6;
 	--navBgColor: rgb(13, 52, 93);
-	--linkFontColor: rgb(0, 0, 0);
-	--navlinkItemColor: rgb(245, 243, 243);
-	--navItemBgColor: rgba(108, 123, 132, 0.603);
-	--navItemColor: rgb(255, 255, 255);
+	/* --linkFontColor: rgb(10, 67, 182); */
+	--navlinkItemColor: rgb(235, 223, 223);
+	--navItemBgColorActive: #638cab;
+	--navItemBgColorHover: rgb(10, 0, 0);
+	--navItemColorHover: rgb(10, 1, 1);
 	--formWidth: 60%;
 	--linkColor: rgb(7, 50, 243);
-	--visitedLinkColor: rgb(255, 102, 0);
-	--linkHoverColor: rgb(34, 139, 34);
+	--visitedLinkColor: rgb(246, 39, 3);
+	--linkHoverColor: rgb(235, 238, 243);
 	--activeLinkColor: deeppink;
 	--buttonBgColor: rgb(0, 128, 170);
 	--buttonFontColor: white;
@@ -30,7 +31,7 @@ html {
 }
 
 body {
-	font-family: "Poppins", sans-serif;
+	font-family: 'Poppins', sans-serif;
 	background-color: var(--bodyBgColor);
 	font-weight: var(--bodyFontweight);
 	line-height: var(--bodyLineheight);
@@ -39,6 +40,8 @@ body {
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
+	gap: 3rem;
+	overflow: scroll;
 }
 
 .page-header {
@@ -68,47 +71,50 @@ body {
 }
 .navigation-list li {
 	list-style: none;
-	padding: 0 1px;
+
 	margin: 0;
-	width: 90px;
 	font-weight: bold;
+	color: var(--navlinkItemColor);
 }
 .navigation-list_item {
 	text-decoration: none;
-	color: var(--navlinkItemColor);
 	display: block;
-	padding: 1em 0.1em;
+	text-align: center;
+	padding: 22px 25px;
+	text-decoration: none;
+	font-size: 18px;
 }
 .navigation-list_item--active {
-	background-color: var(--navItemBgColor);
+	background-color: var(--navItemBgColorActive);
 	color: var(--navItemColor);
 }
 .navigation-list_item:hover {
-	background-color: var(--navItemBgColor);
+	background-color: var(--navItemBgColorHover);
 	color: var(--navItemColor);
-	padding: 1em 0.2em;
 }
 
 .profile {
-	max-width: 600px;
+	max-width: 90%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	align-items: center;
-	margin: 80px auto;
-	padding: 0.5em;
+	margin: 2.5rem auto;
+	padding: 1em;
 }
 .profile_portrait {
-	width: 250px;
+	max-width: 100%;
 	border-radius: 50%;
-	padding: 10px 0.5em 0.5em;
+	padding: 0.5em;
+	border: 3px solid rgb(3, 98, 107);
 }
 .profile-text {
+	width: 320px;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	padding: 10px;
-	margin: 0 10px;
-	border-left: 5px solid rgb(3, 67, 96);
+	padding: 0.5em 1.5em;
+	margin: 0.5em 1.5em;
+	border-right: 5px solid rgb(3, 67, 96);
 }
 
 .contact-container {
@@ -127,9 +133,10 @@ body {
 }
 
 footer {
-	background-color: #73aabb;
+	background-color: var(--navBgColor);
 	margin-top: auto;
 	width: 100%;
+	color: rgb(237, 239, 242);
 }
 .page-footer {
 	display: flex;
@@ -141,14 +148,14 @@ footer {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: 20px;
+	gap: 25px;
 }
 svg {
-	width: 60%;
+	width: 80%;
 }
 .page-footer .social-media a img {
-	width: 50px;
-	height: 50px;
+	width: 60px;
+	height: 60px;
 	margin: 0px;
 }
 
@@ -210,6 +217,13 @@ caption {
 }
 a {
 	color: var(--linkColor);
+	text-decoration: none;
+}
+#github-link {
+	color: rgb(6, 6, 255);
+}
+.navigation-list_item a {
+	color: white;
 }
 a:visited {
 	color: var(--visitedLinkColor);
@@ -256,73 +270,86 @@ button:active,
 
 /*css for index page */
 .work-wrapper {
-	width: 95%;
-	margin: auto;
-	padding: 40px 5px 80px 5px;
+	width: 80%;
+	margin: 0 auto;
+	padding: 10px 5px 80px 5px;
 }
 
 .projects-grid-container {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-gap: 10px;
+	grid-gap: 1rem;
 	margin: auto;
-	padding: 10px;
 	color: black;
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
 }
 .projects-grid-item {
 	background-color: var(--gridBgColor);
-	margin: 10px;
-	padding: 0 50px 50px 50px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-content: center;
+	column-gap: 1px;
+}
+.projects-grid-item img {
+	width: 100%;
+	height: 200px;
+}
+video {
+	width: 100%;
+	height: 200px;
+}
+
+.project-link {
+	border: none;
+	display: block;
+	outline: 0;
+	padding: 5px;
+	color: white;
+	background-color: #020e32;
+	text-align: center;
+	cursor: pointer;
+	width: 100%;
+	font-size: 22px;
+	font-weight: bold;
 }
 
 /* media queries */
-@media (max-width: 500px) {
+@media (max-width: 600px) {
 	.page-header {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
-		border-bottom: 1px solid black;
 		height: 100%;
 		width: 100%;
 		gap: 5px;
 	}
 	.main-navigation {
-		margin: 0 3px;
-		padding: 0;
-		border: 2px solid #0ced8b;
+		margin: 2px;
+		padding: 3px 10px;
 		display: flex;
 		width: 100%;
 	}
 	.page-header img {
 		max-width: 100%;
 		height: 90%;
-		border: 2px solid #f60000;
 	}
 	.navigation-list {
 		background-color: var(--navBgColor);
-		border-top: 1px solid black;
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
 	}
 
 	.navigation-list_item {
-		padding: 0.1em 0;
+		padding: 5px;
+		margin: auto;
 	}
 	.navigation-list_item li {
-		padding: 0.1em;
-		margin: 0.2em;
+		width: 100%;
 	}
 
-	.projects-grid-container {
-		grid-template-columns: 1fr;
-	}
-	.profile {
-		flex-direction: column;
-		max-width: 310px;
-		margin: 5px auto;
-	}
 	.contact-container {
 		margin: 0 auto;
 		padding: 0;
@@ -336,25 +363,21 @@ button:active,
 	}
 }
 
-@media (min-width: 500px) and (max-width: 768px) {
-	.projects-grid-container {
-		grid-template-columns: 1fr 1fr;
-	}
-}
-
 @media (max-width: 750px) {
-	.projects-grid-container {
-		grid-gap: 10px;
+	.profile {
+		flex-direction: column;
+		max-width: 320px;
+		margin: 0.1em auto;
 	}
-	.projects-grid-item:last-child {
-		grid-column: auto / auto;
-		grid-row: auto / auto;
+	.profile_portrait {
+		max-width: 100%;
+		border-radius: 50%;
+		padding: 0.5em;
+		margin: 0.5em auto;
 	}
-	h1 {
-		font-size: 22px;
-	}
-	h2 {
-		font-size: 18px;
+	.profile-text {
+		border-right: none;
+		border-bottom: 5px solid rgb(3, 67, 96);
 	}
 }
 
